<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scoreboardName"
        android:layout_width="168dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/minecraft"
        android:gravity="center"
        android:text="@string/scoreboardNameText"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/scoreboardRecycle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreboardText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/scoreboardVal"
        android:layout_width="171dp"
        android:layout_height="34dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/minecraft"
        android:gravity="center"
        android:text="@string/scoreboardScoreText"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/scoreboardRecycle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/scoreboardName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreboardText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/scoreboardText"
        android:layout_width="339dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/minecraft"
        android:gravity="center"
        android:text="@string/scoreboardText"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/scoreboardRecycle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scoreboardRecycle"
        android:layout_width="333dp"
        android:layout_height="358dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scoreboardbackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="#FFF4D4"
        android:fontFamily="@font/minecraft"
        android:text="@string/backBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>